fixed the height on dark mode

--- a/src/components/switchTheme/style.css
+++ b/src/components/switchTheme/style.css
@@ -14,6 +14,7 @@ body.dark-theme {
 }
 .dark-theme aside {
   background-color: #05050c;
+  min-height: 100vh;
 }
 .dark-theme .dropdown-menu {
   background-color: #05050c;
